cmake_minimum_required(VERSION 3.0)
project(rhtvision)


option(ENABLE_WINGR_DRIVER "Enable WinGr Driver" ON)


set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
include(TVConfig)

include_directories(${CMAKE_BINARY_DIR}/include $
		${CMAKE_SOURCE_DIR}/core
		${CMAKE_SOURCE_DIR}/compat
		)

set(COMPAT_SRCS
	compat/beep.c
	compat/drivevalid.c
	compat/expandpath.c
	compat/fexpand.c
	compat/fileattrs.c
	compat/fileexists.c
	compat/filelength.c
	compat/fixpath.c
	compat/getcurdir.c
	compat/getline.c
	compat/getopt.c
	compat/getopt1.c
	compat/getshell.c
	compat/iffilelen.cc
	compat/isdir.c
	compat/isrelpath.c
	compat/iswild.c
	compat/itoa.c
	compat/nl_langinfo.c
	compat/pathvalid.c
	compat/releasec.c
	compat/snprintf.c
	compat/strlwr.c
	compat/strupr.c
	compat/ticks.c
	compat/validfilename.c
	compat/yieldpro.c
)

set(INTL_SRCS
	intl/dummy/intldummy.c
)

set(RHTV_SRCS
	drivers2.cc
	dual.cc
	fileview.cc
	histlist.cc
	misc.cc
	msgbox.cc
	newstr.cc
	core/tv/calcdisp.cc
	core/tv/calculat.cc
	core/tv/codepage.cc
	core/tv/configfile.cc
	core/tv/fontcoll.cc
	core/tv/fpbase.cc
	core/tv/fpstream.cc
	core/tv/help.cc
	core/tv/helpbase.cc
	core/tv/ifpstrea.cc
	core/tv/iopstrea.cc
	core/tv/ipstream.cc
	core/tv/ofpstrea.cc
	core/tv/opstream.cc
	core/tv/osclipboard.cc
	core/tv/pstream.cc
	core/tv/tapplica.cc
	core/tv/tbackgro.cc
	core/tv/tbutton.cc
	core/tv/tchdirdi.cc
	core/tv/tcheckbo.cc
	core/tv/tclrdisp.cc
	core/tv/tcluster.cc
	core/tv/tcollect.cc
	core/tv/tcolordi.cc
	core/tv/tcolorgr.cc
	core/tv/tcolorit.cc
	core/tv/tcolorse.cc
	core/tv/tcommand.cc
	core/tv/tdesktop.cc
	core/tv/tdialog.cc
	core/tv/tdircoll.cc
	core/tv/tdirlist.cc
	core/tv/tdisplay.cc
	core/tv/tdrawbuf.cc
	core/tv/teditor.cc
	core/tv/teditorf.cc
	core/tv/teditwin.cc
	core/tv/tevent.cc
	core/tv/tfilecol.cc
	core/tv/tfiledia.cc
	core/tv/tfileedi.cc
	core/tv/tfileinf.cc
	core/tv/tfileinp.cc
	core/tv/tfilelis.cc
	core/tv/tfilterv.cc
	core/tv/tframe.cc
	core/tv/tgkey.cc
	core/tv/tgroup.cc
	core/tv/thistory.cc
	core/tv/thistvie.cc
	core/tv/thistwin.cc
	core/tv/thwmouse.cc
	core/tv/tindicat.cc
	core/tv/tinputli.cc
	core/tv/tlabel.cc
	core/tv/tlistbox.cc
	core/tv/tlistvie.cc
	core/tv/tlookupv.cc
	core/tv/tmemo.cc
	core/tv/tmenubar.cc
	core/tv/tmenubox.cc
	core/tv/tmenuvie.cc
	core/tv/tmonosel.cc
	core/tv/tmouse.cc
	core/tv/tnscolle.cc
	core/tv/tnssorte.cc
	core/tv/tobject.cc
	core/tv/tpalette.cc
	core/tv/tparamte.cc
	core/tv/tpoint.cc
	core/tv/tprogini.cc
	core/tv/tprogram.cc
	core/tv/tpwobj.cc
	core/tv/tpwreado.cc
	core/tv/tpwritte.cc
	core/tv/tpxvalid.cc
	core/tv/tradiobu.cc
	core/tv/trangeva.cc
	core/tv/trescoll.cc
	core/tv/tresfile.cc
	core/tv/tscreen.cc
	core/tv/tscrollb.cc
	core/tv/tscrolle.cc
	core/tv/tsortedc.cc
	core/tv/tsortedl.cc
	core/tv/tstatict.cc
	core/tv/tstatusd.cc
	core/tv/tstatusl.cc
	core/tv/tstrinde.cc
	core/tv/tstringc.cc
	core/tv/tstringl.cc
	core/tv/tstrlist.cc
	core/tv/tstrmcla.cc
	core/tv/tstrmtyp.cc
	core/tv/tsubmenu.cc
	core/tv/ttermina.cc
	core/tv/ttextdev.cc
	core/tv/tvalidat.cc
	core/tv/tvedit1.cc
	core/tv/tvedit2.cc
	core/tv/tvedit3.cc
	core/tv/tview.cc
	core/tv/tvintl.cc
	core/tv/tvtext1.cc
#	core/tv/tvtext2.cc
	core/tv/twindow.cc
	names/nbackgro.cc
	names/nbutton.cc
	names/ncalcdis.cc
	names/ncalcula.cc
	names/nchdirdi.cc
	names/ncheckbo.cc
	names/nclrdisp.cc
	names/ncluster.cc
	names/ncollect.cc
	names/ncolordi.cc
	names/ncolorgr.cc
	names/ncolorit.cc
	names/ncolorse.cc
	names/ndesktop.cc
	names/ndialog.cc
	names/ndircoll.cc
	names/ndirlist.cc
	names/neditor.cc
	names/neditwi.cc
	names/nfilecol.cc
	names/nfiledia.cc
	names/nfiledtr.cc
	names/nfileinf.cc
	names/nfileinp.cc
	names/nfilelis.cc
	names/nfilterv.cc
	names/nframe.cc
	names/ngroup.cc
	names/nhistory.cc
	names/nindicat.cc
	names/ninputli.cc
	names/nlabel.cc
	names/nlistbox.cc
	names/nlistvie.cc
	names/nlookupv.cc
	names/nmemo.cc
	names/nmenubar.cc
	names/nmenubox.cc
	names/nmenuvie.cc
	names/nmonosel.cc
	names/nparamte.cc
	names/npxvalid.cc
	names/nradiobu.cc
	names/nrangeva.cc
	names/nresourc.cc
	names/nscrollb.cc
	names/nscrolle.cc
	names/nsortedc.cc
	names/nsortedl.cc
	names/nstatict.cc
	names/nstatusl.cc
	names/nstringc.cc
	names/nstringl.cc
	names/nvalidat.cc
	names/nview.cc
	names/nwindow.cc
	stream/sbackgro.cc
	stream/sbutton.cc
	stream/scalcdis.cc
	stream/scalcula.cc
	stream/schdirdi.cc
	stream/scheckbo.cc
	stream/sclrdisp.cc
	stream/scluster.cc
	stream/scolordi.cc
	stream/scolorgr.cc
	stream/scolorit.cc
	stream/scolorse.cc
	stream/sdesktop.cc
	stream/sdialog.cc
	stream/sdircoll.cc
	stream/sdirlist.cc
	stream/seditor.cc
	stream/seditwin.cc
	stream/sfilecol.cc
	stream/sfiledia.cc
	stream/sfileedi.cc
	stream/sfileinf.cc
	stream/sfileinp.cc
	stream/sfilelis.cc
	stream/sfilterv.cc
	stream/sframe.cc
	stream/sgroup.cc
	stream/shistory.cc
	stream/sindicat.cc
	stream/sinputli.cc
	stream/slabel.cc
	stream/slistbox.cc
	stream/slistvie.cc
	stream/slookupv.cc
	stream/smemo.cc
	stream/smenubar.cc
	stream/smenubox.cc
	stream/smenuvie.cc
	stream/smonosel.cc
	stream/sparamte.cc
	stream/spxvalid.cc
	stream/sradiobu.cc
	stream/srangeva.cc
	stream/sresourc.cc
	stream/sscrollb.cc
	stream/sscrolle.cc
	stream/sstatict.cc
	stream/sstatusl.cc
	stream/sstringc.cc
	stream/sstringl.cc
	stream/sview.cc
	stream/swindow.cc
)

set(RHTV_HDRS
		compat/cl/unistd.h
		compat/compatlayer.h
		core/tv.h
		core/tv/app.h
		core/tv/applictn.h
		core/tv/backgrnd.h
		core/tv/button.h
		core/tv/calc.h
		core/tv/chdirdlg.h
		core/tv/checkbox.h
		core/tv/clrdisp.h
		core/tv/clrdlg.h
		core/tv/clrgroup.h
		core/tv/clrgrpli.h
		core/tv/clritem.h
		core/tv/clriteml.h
		core/tv/clrselct.h
		core/tv/cluster.h
		core/tv/cmdset.h
		core/tv/codepage.h
		core/tv/collectn.h
		core/tv/colorsel.h
		core/tv/configfile.h
		core/tv/configtv.h
		core/tv/desktop.h
		core/tv/dialog.h
		core/tv/dialogs.h
		core/tv/dircoll.h
		core/tv/direntr.h
		core/tv/dirlibo.h
		core/tv/drawbuf.h
		core/tv/drivers.h
		core/tv/editors.h
		core/tv/event.h
		core/tv/eventqu.h
		core/tv/filecoll.h
		core/tv/filedlg.h
		core/tv/filelist.h
		core/tv/fileview.h
		core/tv/filinfpn.h
		core/tv/filinpln.h
		core/tv/findrepl.h
		core/tv/fontcoll.h
		core/tv/fpbase.h
		core/tv/fpstream.h
		core/tv/frame.h
		core/tv/gkey.h
		core/tv/group.h
		core/tv/help.h
		core/tv/helpbase.h
		core/tv/history.h
		core/tv/histvwer.h
		core/tv/histwind.h
		core/tv/ifpstrm.h
		core/tv/indicato.h
		core/tv/inputln.h
		core/tv/intl.h
		core/tv/iopstrm.h
		core/tv/ipstream.h
		core/tv/label.h
		core/tv/listbox.h
		core/tv/lstviewr.h
		core/tv/menu.h
		core/tv/menubar.h
		core/tv/menubox.h
		core/tv/menuitem.h
		core/tv/menus.h
		core/tv/menuview.h
		core/tv/mnoselct.h
		core/tv/msgbox.h
		core/tv/no_mss.h
		core/tv/nscoll.h
		core/tv/nssorcol.h
		core/tv/object.h
		core/tv/objects.h
		core/tv/ofpstrm.h
		core/tv/opstream.h
		core/tv/osclipboard.h
		core/tv/palette.h
		core/tv/parmtext.h
		core/tv/parttree.h
		core/tv/point.h
		core/tv/preadobj.h
		core/tv/program.h
		core/tv/pstream.h
		core/tv/pwritobj.h
		core/tv/radiobtn.h
		core/tv/rect.h
		core/tv/rescoll.h
		core/tv/resfile.h
		core/tv/resitem.h
		core/tv/resource.h
		core/tv/screen.h
		core/tv/scrlbar.h
		core/tv/scroller.h
		core/tv/searchrc.h
		core/tv/sitem.h
		core/tv/sortcoll.h
		core/tv/sortlibo.h
		core/tv/ssc_streams.h
		core/tv/statsdef.h
		core/tv/statsitm.h
		core/tv/statslin.h
		core/tv/stddlg.h
		core/tv/streambl.h
		core/tv/strilist.h
		core/tv/strinrec.h
		core/tv/strlistm.h
		core/tv/strmblcl.h
		core/tv/strmblty.h
		core/tv/strncoll.h
		core/tv/sttctext.h
		core/tv/submenu.h
		core/tv/system.h
		core/tv/tkeyext.h
		core/tv/tkeys.h
		core/tv/tobjstrm.h
		core/tv/ttypes.h
		core/tv/tvconfig.h
		core/tv/tvedit.h
		core/tv/tvobjs.h
		core/tv/tvutil.h
		core/tv/validate.h
		core/tv/view.h
		core/tv/views.h
		core/tv/window.h
		core/tv/yes_mss.h
)

if(TVCompf_MinGW OR TVComp_MSC)
	set(RHTV_REGEX_SRCS compat/regex.c)
endif(TVCompf_MinGW OR TVComp_MSC)

if(HAVE_SSC)
	set(RHTV_SSC_SRCS compat/ssc_streams.cc )
endif(HAVE_SSC)

set(RHTV_ALCON_SRCS
		core/tv/alcon/alcon.h
		core/tv/alcon/key.h
		core/tv/alcon/mouse.h
		core/tv/alcon/screen.h
		core/alcon/alcon.cc
		core/alcon/alcondis.cc
		core/alcon/alconkey.cc
		core/alcon/alconmouse.cc
		core/alcon/alconscr.cc
)

set(RHTV_DOS_SRCS
		core/tv/dos/key.h
		core/tv/dos/mouse.h
		core/tv/dos/screen.h
	core/tv/dos/dosdis.cc
	core/tv/dos/doskey.cc
	core/tv/dos/dosmouse.cc
	core/tv/dos/dosscr.cc
	core/tv/dos/rhscreen.cc
	core/tv/dos/screen.cc
	core/tv/dos/sescreen.cc
	core/tv/dos/vesa.cc
	core/tv/dos/vga.cc
	core/tv/dos/vgaregs.c
	core/tv/dos/vgaregs.h
	core/tv/dos/vgastate.c
	core/tv/dos/vgastate.h
)

set(RHTV_LINUX_SRCS
		core/tv/linux/key.h
		core/tv/linux/log.h
		core/tv/linux/mouse.h
		core/tv/linux/screen.h
		core/tv/linux/linuxdis.cc
		core/tv/linux/linuxkey.cc
		core/tv/linux/linuxmouse.cc
		core/tv/linux/linuxscr.cc
		)

set(RHTV_QNX4_SRCS
		core/tv/qnx4/key.h
		core/tv/qnx4/mouse.h
		core/tv/qnx4/screen.h
	core/tv/qnx4/qnx4dis.cc
	core/tv/qnx4/qnx4key.cc
	core/tv/qnx4/qnx4mouse.cc
	core/tv/qnx4/qnx4scr.cc
)

set(RHTV_QNXRTP_SRCS
		core/tv/qnxrtp/key.h
		core/tv/qnxrtp/mouse.h
		core/tv/qnxrtp/screen.h
	core/tv/qnxrtp/qnxdis.cc
	core/tv/qnxrtp/qnxkey.cc
	core/tv/qnxrtp/qnxmouse.cc
	core/tv/qnxrtp/qnxscr.cc
)

set(RHTV_UNIX_SRCS
		core/tv/unix/key.h
		core/tv/unix/mouse.h
		core/tv/unix/screen.h
		core/tv/unix/xtkey.h
		core/tv/unix/xtmouse.h
		core/tv/unix/xtscreen.h
	core/tv/unix/unixdis.cc
	core/tv/unix/unixkey.cc
	core/tv/unix/unixmouse.cc
	core/tv/unix/unixscr.cc
	core/tv/unix/xtermdis.cc
	core/tv/unix/xtermkey.cc
	core/tv/unix/xtermmouse.cc
	core/tv/unix/xtermscr.cc
)

set(RHTV_WINDOWS_SRCS
	compat/fnmatch.c
	compat/glob.c
	compat/globfree.c
	compat/mkstemp.c
	compat/ntdirent.c
	compat/unc.c
	compat/unc_nt.c
		core/tv/wingr/key.h
		core/tv/wingr/mouse.h
		core/tv/wingr/screen.h
	core/tv/wingr/wingrdis.cc
	core/tv/wingr/wingrkey.cc
	core/tv/wingr/wingrmouse.cc
	core/tv/wingr/wingrscr.cc
		core/tv/win32/key.h
		core/tv/win32/mouse.h
		core/tv/win32/screen.h
		core/tv/win32/win32clip.h
	core/tv/win32/win32clip.cc
	core/tv/win32/win32dis.cc
	core/tv/win32/win32key.cc
	core/tv/win32/win32mouse.cc
	core/tv/win32/win32scr.cc
		core/tv/winnt/key.h
		core/tv/winnt/mouse.h
		core/tv/winnt/screen.h
	core/tv/winnt/winntdis.cc
	core/tv/winnt/winntkey.cc
	core/tv/winnt/winntmouse.cc
	core/tv/winnt/winntscr.cc
)

set(RHTV_X11_SRCS
		core/tv/x11/key.h
		core/tv/x11/mouse.h
		core/tv/x11/screen.h
	core/tv/x11/x11dis.cc
	core/tv/x11/x11key.cc
	core/tv/x11/x11mouse.cc
	core/tv/x11/x11src.cc
)

# TODO: Make these work
#if(DOS)
#	set(RHTV_PLATFORM_SRCS "${RHTV_DOS_SRCS}")
#endif(DOS)
#if(QNX4)
#	set(RHTV_PLATFORM_SRCS "${RHTV_QNX4_SRCS}")
#endif(QNX4)
#if(QNXRTP)
#	set(RHTV_PLATFORM_SRCS "${RHTV_QNXRTP_SRCS}")
#endif(QNXRTP)

if(WIN32)
	set(RHTV_PLATFORM_SRCS "${RHTV_WINDOWS_SRCS}")
endif(WIN32)

if(UNIX)
	set(RHTV_PLATFORM_SRCS "${RHTV_UNIX_SRCS}")
endif(UNIX)

if(X11_FOUND)
	list(APPEND RHTV_PLATFORM_SRCS "${RHTV_X11_SRCS}")
endif(X11_FOUND)

if("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
	list(APPEND RHTV_PLATFORM_SRCS "${RHTV_LINUX_SRCS}")
endif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")

add_library(rhtv ${RHTV_HDRS} ${INTL_SRCS} ${COMPAT_SRCS} ${RHTV_SRCS} ${RHTV_PLATFORM_SRCS} ${RHTV_REGEX_SRCS} ${RHTV_SSC_SRCS})

ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
